add site header html and css

--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
 }
 
 *:focus {
-  outline: #dce5e2 1px dashed;
+  outline: #3a7f9b 1px dashed;
   outline-offset: 3px;
 }
 
@@ -42,4 +42,69 @@ body {
   font-weight: normal;
   font-style: normal;
   font-display: swap;
+}
+.nav__list {
+  list-style: none;
+  display: flex;
+}
+.nav__item:not(:last-child) {
+  margin-right: 3.2rem;
+}
+.nav__link {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #222;
+}
+.nav__link:hover {
+  color: #3a7f9b;
+}
+
+.header {
+  padding: 3rem 0;
+}
+.header__inner {
+  width: 100%;
+  max-width: 1340px;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header__logo {
+  display: flex;
+}
+.header__logo-img {
+  width: 170px;
+  height: 21px;
+  -o-object-fit: contain;
+     object-fit: contain;
+  display: block;
+}
+.header__btn-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+
+.cart-btn, .search-btn {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.search-btn img {
+  width: 24px;
+  height: 24px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.cart-btn img {
+  width: 24px;
+  height: 24px;
+  -o-object-fit: contain;
+     object-fit: contain;
 }/*# sourceMappingURL=main.css.map */
