--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,4 +1,7 @@
 .nav {
+    @include responsive(tables) {
+        display: none;
+    }
     &__list {
         list-style: none;
         display: flex;
