--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -13,6 +13,12 @@ html {
     height: 100%;
     scroll-behavior: smooth;
     font-size: 62.5%;
+    @include responsive(middle-table) {
+        font-size: 58%;
+    }
+    @include responsive(phone) {
+        font-size: 52%;
+    }
 }
 body {
     height: 100%;
@@ -22,6 +28,10 @@ body {
     font-family: $text-fonts;
     color: $text-color;
     font-size: 1.4rem;
-    line-height: 1.14;
+    line-height: 1.2;
     background-color: $white-color;
+}
+
+.main {
+    flex-grow: 1;
 }
