--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -32,3 +32,19 @@
         height: 30px;
     }
 }
+
+
+%hover-btn {
+    background-color: $primary-color;
+    border-color: $primary-color;
+    color: $white-color;
+}
+.hero__btn {
+    @include site-button(1.4rem 5.3rem);
+    &:hover {
+        @extend %hover-btn;
+    }
+    &:active {
+        opacity: 0.6;
+    }
+}
