--- a/css/main.css
+++ b/css/main.css
@@ -109,6 +109,204 @@ body {
   gap: 2rem;
 }
 
+.catigories {
+  padding-top: 4.7rem;
+  padding-bottom: 1rem;
+}
+.catigories__inner {
+  width: 100%;
+  max-width: 1340px;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.catigories__title {
+  font-family: "Readex Pro", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 4.2rem;
+  line-height: 1.2;
+  text-align: center;
+  color: #000;
+  margin-bottom: 0.9rem;
+}
+.catigories__subtitle {
+  width: 100%;
+  max-width: 628px;
+  font-family: "Readex Pro", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 1.4rem;
+  line-height: 1.2;
+  text-align: center;
+  color: #000;
+  margin-bottom: 5.5rem;
+}
+.catigories__list {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, minmax(200px, 1fr));
+  -moz-column-gap: 1.6rem;
+       column-gap: 1.6rem;
+  row-gap: 5rem;
+  list-style: none;
+}
+@media only screen and (max-width: 885px) {
+  .catigories__list {
+    grid-template-columns: repeat(2, minmax(200px, 1fr));
+  }
+}
+@media only screen and (max-width: 768px) {
+  .catigories__list {
+    row-gap: 2rem;
+  }
+}
+@media only screen and (max-width: 576px) {
+  .catigories__list {
+    grid-template-columns: repeat(2, minmax(100px, 1fr));
+  }
+}
+.catigories li {
+  border-radius: 3.2px;
+  box-shadow: 0px 0px 2rem 0px rgb(122, 129, 136);
+}
+.catigories li h3 {
+  font-family: "Inter", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 1.5rem;
+  line-height: 1.26;
+}
+@media only screen and (max-width: 885px) {
+  .catigories li h3 {
+    font-size: 1rem;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .catigories li h3 {
+    font-size: 1rem;
+  }
+}
+@media only screen and (max-width: 576px) {
+  .catigories li h3 {
+    font-size: 1rem;
+  }
+}
+.catigories li h2 {
+  font-family: "Readex Pro", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 3.2rem;
+  line-height: 1.2;
+}
+@media only screen and (max-width: 885px) {
+  .catigories li h2 {
+    font-size: 3rem;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .catigories li h2 {
+    font-size: 2.5rem;
+  }
+}
+@media only screen and (max-width: 576px) {
+  .catigories li h2 {
+    font-size: 2rem;
+  }
+}
+.catigories__item-left:first-child {
+  grid-area: 1/1/3/3;
+  padding-left: 4.2rem;
+  padding-right: 4.2rem;
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+}
+@media only screen and (max-width: 885px) {
+  .catigories__item-left:first-child {
+    grid-area: 1/1/2/3;
+  }
+}
+.catigories__item-left:first-child h3 {
+  margin-left: auto;
+}
+.catigories__item-left:first-child h2 {
+  margin-left: auto;
+}
+.catigories__item-left:first-child img {
+  width: 90%;
+  height: auto;
+}
+.catigories__item-left:nth-child(2) {
+  grid-area: 3/1/4/3;
+  padding-left: 4.2rem;
+  padding-right: 4.2rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  text-align: right;
+}
+@media only screen and (max-width: 885px) {
+  .catigories__item-left:nth-child(2) {
+    grid-area: 2/1/3/3;
+  }
+}
+.catigories__item-left:nth-child(2) img {
+  width: 60%;
+  height: auto;
+}
+.catigories__item-right {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.catigories__item-right:nth-child(3) {
+  grid-area: 1/3/4/4;
+  overflow: hidden;
+  text-align: center;
+  padding-bottom: 1rem;
+}
+@media only screen and (max-width: 885px) {
+  .catigories__item-right:nth-child(3) {
+    grid-area: 3/1/4/2;
+  }
+}
+.catigories__item-right:nth-child(3) img {
+  margin-bottom: 4.2rem;
+  width: 450px;
+  height: auto;
+  margin-left: 1.6rem;
+}
+@media only screen and (max-width: 576px) {
+  .catigories__item-right:nth-child(3) img {
+    width: 110%;
+  }
+}
+.catigories__item-right:nth-child(4) {
+  grid-area: 1/4/4/5;
+  overflow: hidden;
+  text-align: center;
+  display: flex;
+  flex-direction: column-reverse;
+  padding-top: 1rem;
+}
+@media only screen and (max-width: 885px) {
+  .catigories__item-right:nth-child(4) {
+    grid-area: 3/2/4/3;
+  }
+}
+.catigories__item-right:nth-child(4) img {
+  margin-top: 4.2rem;
+  width: 467px;
+  height: auto;
+  transform: translateX(-25%);
+}
+@media only screen and (max-width: 576px) {
+  .catigories__item-right:nth-child(4) img {
+    width: 150%;
+  }
+}
+
 .hero {
   width: 100%;
   max-width: 1340px;
@@ -123,6 +321,7 @@ body {
   background-color: #dce5e2;
   border-radius: 3.2rem;
   position: relative;
+  margin-bottom: 2.8rem;
 }
 @media only screen and (max-width: 993px) {
   .hero {
