--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import 'layout/grid';
 @import 'layout/header';
 @import 'layout/footer';
+@import 'layout/catigories';
 @import 'layout/hero';
 @import 'layout/forms';
 
