--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,5 +4,6 @@ $text-color: #222;
 $site-bg-color: #fff;
 $primary-color: #3a7f9b;
 $section-bg-color: #dce5e2;
+$list-text-color: #4b4b4b;
 $white-color: #fff;
 $black-color: #000;
