--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import 'layout/header';
 @import 'layout/footer';
 @import 'layout/catigories';
+@import 'layout/sales';
 @import 'layout/hero';
 @import 'layout/forms';
 
