add best section

--- a/css/main.css
+++ b/css/main.css
@@ -523,6 +523,97 @@ body {
   }
 }
 
+.best {
+  padding: 4.7rem 0 2.8rem;
+}
+.best__inner {
+  width: 100%;
+  max-width: 1340px;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+.best__title {
+  font-family: "Readex Pro", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 4.2rem;
+  line-height: 1.2;
+  text-align: center;
+  color: #000;
+  margin-bottom: 0.9rem;
+}
+.best__subtitle {
+  width: 100%;
+  max-width: 628px;
+  font-family: "Readex Pro", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 1.4rem;
+  line-height: 1.2;
+  text-align: center;
+  color: #000;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 5.6rem;
+}
+.best__list {
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 2.8rem;
+  text-align: center;
+}
+@media only screen and (max-width: 440px) {
+  .best__list {
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  }
+}
+.best__item {
+  padding-top: 4.1rem;
+  border-radius: 1.6rem;
+  background-color: #f8f9fa;
+}
+.best__item-subtitle {
+  width: 100%;
+  max-width: 628px;
+  font-family: "Readex Pro", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 1.4rem;
+  line-height: 1.2;
+  text-align: center;
+  color: #000;
+}
+.best__item-title {
+  font-family: "Readex Pro", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 2.8rem;
+  line-height: 1.25;
+  color: #000;
+  margin-bottom: 3rem;
+}
+.best__item-img {
+  width: 100%;
+  height: 250px;
+  display: block;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+@media only screen and (max-width: 576px) {
+  .best__item-img {
+    max-width: 100%;
+    height: auto;
+  }
+}
+.best__item-btn {
+  padding: 1.4rem 6.3rem;
+  border: 1px #000 solid;
+  border-radius: 20rem;
+  color: #000;
+  text-decoration: none;
+  display: inline-block;
+  margin-bottom: 3rem;
+}
+
 .burger, .cart-btn, .search-btn {
   background-color: transparent;
   border: none;
@@ -556,7 +647,7 @@ body {
   height: 30px;
 }
 
-.hero__btn:hover {
+.best__item-btn:hover, .hero__btn:hover {
   background-color: #3a7f9b;
   border-color: #3a7f9b;
   color: #fff;
