--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -5,5 +5,6 @@ $site-bg-color: #fff;
 $primary-color: #3a7f9b;
 $section-bg-color: #dce5e2;
 $list-text-color: #4b4b4b;
+$footer-bg-color: #f8f9fa;
 $white-color: #fff;
 $black-color: #000;
