--- a/css/main.css
+++ b/css/main.css
@@ -523,6 +523,107 @@ body {
   }
 }
 
+.ideas {
+  padding-bottom: 2.4rem;
+  margin-top: 4.7rem;
+}
+.ideas__inner {
+  width: 100%;
+  max-width: 1340px;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.ideas__title {
+  font-family: "Readex Pro", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 4.2rem;
+  line-height: 1.2;
+  text-align: center;
+  color: #000;
+  margin-bottom: 0.9rem;
+}
+.ideas__subtitle {
+  width: 100%;
+  max-width: 628px;
+  font-family: "Readex Pro", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 1.4rem;
+  line-height: 1.2;
+  text-align: center;
+  color: #000;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 5.6rem;
+}
+.ideas__content {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 7.3rem;
+}
+@media only screen and (max-width: 993px) {
+  .ideas__content {
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    width: 100%;
+  }
+}
+.ideas__img {
+  width: 100%;
+  max-width: 620px;
+  height: 420px;
+  margin-right: 2rem;
+}
+@media only screen and (max-width: 1200px) {
+  .ideas__img {
+    width: 50%;
+    max-width: 50%;
+    height: auto;
+  }
+}
+@media only screen and (max-width: 993px) {
+  .ideas__img {
+    width: 100%;
+    max-width: 620px;
+    margin-right: 0;
+  }
+}
+.ideas__content-left {
+  width: 100%;
+  max-width: 639px;
+  padding-top: 2rem;
+}
+.ideas__text {
+  font-size: 2.4rem;
+  line-height: 1.2;
+  color: #000;
+}
+.ideas__text:not(:last-child) {
+  margin-bottom: 2.8rem;
+}
+@media only screen and (max-width: 768px) {
+  .ideas__text {
+    font-size: 2rem;
+  }
+  .ideas__text:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+.ideas__see-all {
+  text-decoration: none;
+  text-transform: capitalize;
+  font-size: 2.4rem;
+  line-height: 1.2;
+  color: #000;
+  display: inline-flex;
+  align-items: center;
+}
+
 .best {
   padding: 4.7rem 0 2.8rem;
 }
