--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,7 @@
 @import 'layout/sales';
 @import 'layout/hero';
 @import 'layout/forms';
+@import 'layout/ideas';
 @import 'layout/best';
 
 @import 'components/buttons';
