--- a/css/main.css
+++ b/css/main.css
@@ -523,6 +523,81 @@ body {
   }
 }
 
+.search__form {
+  margin-bottom: 1.8rem;
+  width: 100%;
+  text-align: center;
+}
+
+.search__input {
+  width: 650px;
+  background-color: #f8f9fa;
+  border: solid #c5c5c5 2px;
+  border-radius: 100px;
+  padding: 1.5rem 1.7rem 1.6rem 6.7rem;
+  background-image: url("../images/svg/search.svg");
+  background-repeat: no-repeat;
+  background-size: 3rem 2.9rem;
+  background-position: center left 1.7rem;
+}
+@media only screen and (max-width: 768px) {
+  .search__input {
+    width: 100%;
+  }
+}
+
+.search__input::-moz-placeholder {
+  font-size: 1.4rem;
+  line-height: 1.2;
+  color: #000;
+}
+
+.search__input:-ms-input-placeholder {
+  font-size: 1.4rem;
+  line-height: 1.2;
+  color: #000;
+}
+
+.search__input::placeholder {
+  font-size: 1.4rem;
+  line-height: 1.2;
+  color: #000;
+}
+
+.register__form {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.register__input {
+  border: 1px solid #000;
+  border-radius: 5.4rem 0 0 5.4rem;
+  padding: 1.6rem 1rem 1.6rem 3.2rem;
+  background-color: transparent;
+  width: 285px;
+  font-size: 1.4rem;
+}
+.register__input::-moz-placeholder {
+  color: #000;
+  font-size: 1.4rem;
+}
+.register__input:-ms-input-placeholder {
+  color: #000;
+  font-size: 1.4rem;
+}
+.register__input::placeholder {
+  color: #000;
+  font-size: 1.4rem;
+}
+@media only screen and (max-width: 440px) {
+  .register__input {
+    flex-grow: 1;
+    width: 0px;
+  }
+}
+
 .ideas {
   padding-bottom: 2.4rem;
   margin-top: 4.7rem;
@@ -715,6 +790,190 @@ body {
   margin-bottom: 3rem;
 }
 
+.best {
+  padding: 4.7rem 0 2.8rem;
+}
+.best__inner {
+  width: 100%;
+  max-width: 1340px;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+.best__title {
+  font-family: "Readex Pro", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 4.2rem;
+  line-height: 1.2;
+  text-align: center;
+  color: #000;
+  margin-bottom: 0.9rem;
+}
+.best__subtitle {
+  width: 100%;
+  max-width: 628px;
+  font-family: "Readex Pro", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 1.4rem;
+  line-height: 1.2;
+  text-align: center;
+  color: #000;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 5.6rem;
+}
+.best__list {
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 2.8rem;
+  text-align: center;
+}
+@media only screen and (max-width: 440px) {
+  .best__list {
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  }
+}
+.best__item {
+  padding-top: 4.1rem;
+  border-radius: 1.6rem;
+  background-color: #f8f9fa;
+}
+.best__item-subtitle {
+  width: 100%;
+  max-width: 628px;
+  font-family: "Readex Pro", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 1.4rem;
+  line-height: 1.2;
+  text-align: center;
+  color: #000;
+}
+.best__item-title {
+  font-family: "Readex Pro", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 2.8rem;
+  line-height: 1.25;
+  color: #000;
+  margin-bottom: 3rem;
+}
+.best__item-img {
+  width: 100%;
+  height: 250px;
+  display: block;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+@media only screen and (max-width: 576px) {
+  .best__item-img {
+    max-width: 100%;
+    height: auto;
+  }
+}
+.best__item-btn {
+  padding: 1.4rem 6.3rem;
+  border: 1px #000 solid;
+  border-radius: 20rem;
+  color: #000;
+  text-decoration: none;
+  display: inline-block;
+  margin-bottom: 3rem;
+}
+
+.register {
+  padding-top: 4.2rem;
+  padding-bottom: 1.9rem;
+}
+.register__inner {
+  width: 100%;
+  max-width: 935px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #dce5e2;
+  border-radius: 16px;
+  padding: 4.7rem 2rem 4.3rem;
+  text-align: center;
+}
+.register__title {
+  font-family: "Readex Pro", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 4.2rem;
+  line-height: 1.2;
+  text-align: center;
+  color: #000;
+  margin-bottom: 0.9rem;
+}
+.register__subtitle {
+  width: 100%;
+  max-width: 628px;
+  font-family: "Readex Pro", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 1.4rem;
+  line-height: 1.2;
+  text-align: center;
+  color: #000;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 1.4rem;
+}
+.register__img {
+  width: 233px;
+  height: 200px;
+  -o-object-fit: contain;
+     object-fit: contain;
+  margin-bottom: 1.4rem;
+}
+
+.search {
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 5rem;
+  padding-bottom: 2.8rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.search__title {
+  font-family: "Readex Pro", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 4.2rem;
+  line-height: 1.2;
+  color: #000;
+  margin-bottom: 2.4rem;
+  text-align: center;
+}
+.search__btn-wrapper {
+  width: 100%;
+  max-width: 650px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.search__btn-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
+  gap: 0.7rem;
+  width: 100%;
+  max-width: 650px;
+  flex-wrap: wrap;
+}
+.search__btn-list:first-child {
+  margin-bottom: 0.7rem;
+}
+.search__btn-item {
+  border: solid #c5c5c5 1px;
+  border-radius: 200px;
+  padding: 1.2rem 2.2rem;
+  cursor: pointer;
+  font-size: 1.4rem;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
 .burger, .cart-btn, .search-btn {
   background-color: transparent;
   border: none;
@@ -764,4 +1023,12 @@ body {
 }
 .hero__btn:active {
   opacity: 0.6;
+}
+
+.register__btn {
+  border-radius: 0 5.4rem 5.4rem 0;
+  background-color: #000;
+  padding: 1.5rem 3.2rem;
+  color: #fff;
+  font-size: 1.4rem;
 }/*# sourceMappingURL=main.css.map */
