--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,9 @@
 @import 'layout/forms';
 @import 'layout/ideas';
 @import 'layout/best';
+@import 'layout/best';
+@import 'layout/register';
+@import 'layout/search';
 
 @import 'components/buttons';
 
