--- a/css/main.css
+++ b/css/main.css
@@ -109,6 +109,108 @@ body {
   gap: 2rem;
 }
 
+.footer {
+  padding-top: 4.5rem;
+  padding-bottom: 0.4rem;
+  background-color: #f8f9fa;
+}
+.footer__inner {
+  width: 100%;
+  max-width: 1340px;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+.footer__top {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 6.3rem;
+}
+.footer__top-text-wrapper {
+  width: 100%;
+  max-width: 394px;
+}
+.footer__logo {
+  display: flex;
+  margin-bottom: 1.8rem;
+}
+.footer__logo-img {
+  width: 181px;
+  height: 22px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.footer__top-text {
+  width: 100%;
+  max-width: 304px;
+}
+.footer__top-list {
+  width: 100%;
+  max-width: 197px;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+}
+.footer__top-title {
+  font-family: "Readex Pro", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 2.2rem;
+  line-height: 1.2;
+  color: #000;
+  margin-bottom: 2rem;
+}
+.footer__top-item:not(:last-child) {
+  margin-bottom: 1.4rem;
+}
+.footer__top-link {
+  text-decoration: none;
+  font-size: 1.7rem;
+  color: #000;
+}
+.footer__top-link:hover {
+  color: #3a7f9b;
+}
+.footer__hr {
+  width: 100%;
+  height: 1px;
+  background-color: #dce5e2;
+  margin-bottom: 5.3rem;
+  border: none;
+}
+.footer__bottom {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.footer__bottom-text-wrapper {
+  display: flex;
+  align-items: center;
+}
+.footer__bottom-text {
+  font-family: "Readex Pro", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 1.8rem;
+  color: #000;
+}
+.footer__bottom-link {
+  font-size: 1.8rem;
+  text-decoration: none;
+  color: #000;
+  display: flex;
+  align-items: center;
+  margin-left: 2px;
+}
+.footer__bottom-link:hover {
+  color: #3a7f9b;
+}
+.footer__bottom-link img {
+  width: 21px;
+  height: 18px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
 .catigories {
   padding-top: 4.7rem;
   padding-bottom: 1rem;
